--- a/index (1).html
+++ b/index (1).html
@@ -18,20 +18,6 @@
         </div> 
         <div class="abas textos">
         <div class="aba-conteudo ativo">
-            <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em JavaScript</h3>
-            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar meu objetivo</h4>
-        </div>
-        <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Criar um portifolio com os meus 3 melhores projetos</h3>
-            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivos</h4>
-        </div>
-        <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Atualizar meu Currriculo com os certificados da Alura</h3>
-            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-        </div>
-      </div>  
-   </div>
-   </section>
-   <script src="main.js"></script>
+            <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em JavaScript</h3>sss    
 </body>
 </html>
