--- a/index.html
+++ b/index.html
@@ -24,7 +24,35 @@
         <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal">Criar um portifolio com os meus 3 melhores projetos</h3>
             <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivos</h4>
-        </div>
+            <div class="contador>
+            <div class="contador-digito>
+                <p class="contador-digito-numero">7</p>
+                    <p class="contador-digito-texto">dias</p>
+            </div>
+            <div class="contador-digito">
+                <p class="contador-digito-numero">7</p>
+                <p class="contador-digito-texto">horas</p>
+                </div>
+                <div class="conrtador-digito">
+                    <p cllass="contador-digito-numero">7</p>
+                    <p class="contador-digito-texto">min</p>
+                </div>
+                <div class="contador-digito">
+                    <p class="contador--digito-numero">7</p>
+                    <p class="contador-digito-texto">seg</p>
+                </div>
+                </div>
+                </div>
+            <div class="aba-conteuo">
+                <h3 class="aba-conteudo-titulo-principal">criar 5 projetos em javascript</h3>
+                <h4 class="aba-conteudo-titulo-secundrio">tempo paera completar o objetivo</h4>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo=principal">criar um portifolio com os meus 3 melhores projetos</h3>
+                    <h4 class="aba--conteudo-secundario">tempo para completrar objetivo</h4>
+                    <div class="contador"></div>
+                    </div>
+                    <div class="aba-contador">
         <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal">Atualizar meu Currriculo com os certificados da Alura</h3>
             <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
