--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
             <button class="botao">Criar um portifolio</button>
             <button class="botao">Atualizar meu curriculos</button>
         </div> 
+        <div class="abas-textos">
+        <div class="abas-conteudo-ativo">
+            <h3 class="abas-conteudo-titulo-principal">estudar 4 cursos na alura</h3>
+            <h3 class="abas-conteudo-titulo-secundario"></h3>
+
+
+
+
+
+
+
+
         <div class="abas textos">
         <div class="aba-conteudo ativo">
             <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em JavaScript</h3>
@@ -56,10 +68,29 @@
         <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal">Atualizar meu Currriculo com os certificados da Alura</h3>
             <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            <div class="contador">
+            <div class="contador-digito">
+                <p class="contador-digito-numero" id="dias"></p>
+                <p class="contador-digito-texto">dias</p>
+            </div>
+            <div class="contador-digito">
+                <p class="contador-digito-numero" id="horas3"></p>
+                <p class="contador-digito-texto">horas</p>
+              </div>
+              <div class="contador-digito">
+                  <p class="contador-digito-numero" id="min3"></p>  
+                  <p class="contador-digito-texto">min</p>
+                  </div>
+                  <div class="contador-digito">
+                    <p class="contador-digito-numero" id="seg3"></p>
+                    <p class="contador-digito-texto">seg</p>
+              </div>
         </div>
       </div>  
+   </div>
    </div>
    </section>
    <script src="main.js"></script>
 </body>
+
 </html>
