--- a/index.html
+++ b/index.html
@@ -3,94 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ana</title>
+    <title>Gerador de senha</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <section class="conteudo principal">
-        <h2 class="titulo principal">Meus Objetivos do ano<span>_</span></h2>
-        <div class="conteudo">
-        <div class="botoes">
-            <button class="botao ativo">Cursos na Alura</button>
-            <button class="botao">Criar projetos em Javascript</button>
-            <button class="botao">Criar um portifolio</button>
-            <button class="botao">Atualizar meu curriculos</button>
-        </div> 
-        <div class="abas-textos">
-        <div class="abas-conteudo-ativo">
-            <h3 class="abas-conteudo-titulo-principal">estudar 4 cursos na alura</h3>
-            <h3 class="abas-conteudo-titulo-secundario"></h3>
-
-
-
-
-
-
-
-
-        <div class="abas textos">
-        <div class="aba-conteudo ativo">
-            <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em JavaScript</h3>
-            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar meu objetivo</h4>
+    <section class="conteudo">
+        <div class="canteudo-titulo">
+        <img src="unlock.svg" alt="cadeado fechado">
+        <h2 class="titulo-principal">gerador de senhas</h2>
+        <h3 clas="titulo-secundario">Gere instantaneamente uma senha aleatoria e segura</h3>
+          </div>
+        <div class="conteudo-senha">
+            <label for="senha">senha</label>
+            <inout name="senha" type="text" id="campo-senha">
         </div>
-        <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Criar um portifolio com os meus 3 melhores projetos</h3>
-            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivos</h4>
-            <div class="contador>
-            <div class="contador-digito>
-                <p class="contador-digito-numero">7</p>
-                    <p class="contador-digito-texto">dias</p>
-            </div>
-            <div class="contador-digito">
-                <p class="contador-digito-numero">7</p>
-                <p class="contador-digito-texto">horas</p>
-                </div>
-                <div class="conrtador-digito">
-                    <p cllass="contador-digito-numero">7</p>
-                    <p class="contador-digito-texto">min</p>
-                </div>
-                <div class="contador-digito">
-                    <p class="contador--digito-numero">7</p>
-                    <p class="contador-digito-texto">seg</p>
-                </div>
-                </div>
-                </div>
-            <div class="aba-conteuo">
-                <h3 class="aba-conteudo-titulo-principal">criar 5 projetos em javascript</h3>
-                <h4 class="aba-conteudo-titulo-secundrio">tempo paera completar o objetivo</h4>
-                </div>
-                <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo=principal">criar um portifolio com os meus 3 melhores projetos</h3>
-                    <h4 class="aba--conteudo-secundario">tempo para completrar objetivo</h4>
-                    <div class="contador"></div>
-                    </div>
-                    <div class="aba-contador">
-        <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Atualizar meu Currriculo com os certificados da Alura</h3>
-            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-            <div class="contador">
-            <div class="contador-digito">
-                <p class="contador-digito-numero" id="dias"></p>
-                <p class="contador-digito-texto">dias</p>
-            </div>
-            <div class="contador-digito">
-                <p class="contador-digito-numero" id="horas3"></p>
-                <p class="contador-digito-texto">horas</p>
-              </div>
-              <div class="contador-digito">
-                  <p class="contador-digito-numero" id="min3"></p>  
-                  <p class="contador-digito-texto">min</p>
-                  </div>
-                  <div class="contador-digito">
-                    <p class="contador-digito-numero" id="seg3"></p>
-                    <p class="contador-digito-texto">seg</p>
-              </div>
+        <div class="parametro">
+            <h3 clas="parametro-titulo">personalize sua senha</h3>
+            <div clas="parametro-coluna-senha">
+                <div clas="parametro-senha">
+                    <h4 clas="parametro-senha_titulo">Numero de caracteres</h4>
         </div>
-      </div>  
-   </div>
-   </div>
-   </section>
-   <script src="main.js"></script>
-</body>
+        <div class="parametro-senha">
+            <h4 clas="parametro-senha_titulo">Caracteristicas da senha</h4>
+        </div>
+        <div clas="parametro-senha">
+            <h4 class="parametro-senha_titulo">Força da senha</h4>
+          </div>
+    </div>
 
-</html>
+
+       
