--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,28 +10,22 @@
 
 <body>
     <section class="conteudo">
-        <div class="canteudo-titulo">
+        <div class="conteudo-titulo">
         <img src="unlock.svg" alt="cadeado fechado">
-        <h2 class="titulo-principal">gerador de senhas</h2>
+        <h2 class="titulo-principal">Gerador de senhas</h2>
         <h3 clas="titulo-secundario">Gere instantaneamente uma senha aleatoria e segura</h3>
           </div>
         <div class="conteudo-senha">
             <label for="senha">senha</label>
-            <inout name="senha" type="text" id="campo-senha">
+            <input name="senha" type="text" id="campo-senha">
         </div>
-        <div class="parametro">
-            <h3 clas="parametro-titulo">personalize sua senha</h3>
-            <div clas="parametro-coluna-senha">
-                <div clas="parametro-senha">
-                    <h4 clas="parametro-senha_titulo">Numero de caracteres</h4>
+        <div class="conteudo-senha">
+            <label for="senha">Senha</label>
+            <input name="senha"> <type="text" id="campo-senha"> </type>
         </div>
-        <div class="parametro-senha">
-            <h4 clas="parametro-senha_titulo">Caracteristicas da senha</h4>
-        </div>
-        <div clas="parametro-senha">
-            <h4 class="parametro-senha_titulo">Força da senha</h4>
-          </div>
-    </div>
+        <div class="parametro"
+          <h3 class="parametro-titulo"></h3>
+ 
 
 
        
