--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Numero de caracteres</h4>
                     <div class="parametro-senha-botoes">
-                        <button class="parametro-senha__botao"> - </button>
-                        <p class="parametro-senha__texto"> 12 </p>
-                        <button class="parametro-senha__botao"> + </button>
+                        <button class="parametro-senha__botao">-</button>
+                        <p class="parametro-senha__texto">12</p>
+                        <button class="parametro-senha__botao">+</button>
                     </div>
                 </div>
             </div>
@@ -41,11 +41,17 @@
                     <input name="maiusculo" type="checkbox" class="checkbox" checked>
                     <label for="maiusculo">Letras maiusculas</label>
                 </div>
+                <div class="parametro-senha-checkbox">
+                    <input name="minusculo" type="checkbox" class="checkbox">
+                    <label for="minusculo">Letras minusculas</label>
+            </div>
+            <div class="parametro-senha-checkbox">
+                <input name="numero" type="checkbox" class="checkbox"> 
+                <label for="numero">Numeros</label>
             </div>
             <div class="parametro-senha-checkbox">
                 <input name="simbolo" type="checkbox" class="checkbox"> 
                 <label for="simbolo">Simbolos</label>
-                </div>
                 </div>
                 <div clas="paramento-senha">
                  <h4 class="parametro-senha_titulo">forca da senha</h4>
@@ -63,9 +69,3 @@
  <script src="main.js"></script>
 </body>
 </html> 
-
-          
- 
-
-
-       
